plugins {
	id 'java'
    id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
    id "org.flywaydb.flyway" version "9.22.0"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.1'

    implementation group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '3.1.3'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.3'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.4'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.1.4'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.4'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:postgresql:1.19.1'
    testCompileOnly 'org.projectlombok:lombok:1.18.28'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'


}

tasks.named('test') {
	useJUnitPlatform()
}
